correcting alignment styling

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 body {
-  align: center;
+  text-align: center;
   font-family: Helvetica;
 }
 .headline-list {
